# Human-Activity-Recognition

./: .gitignore  action_data.csv  dataset.py  final_data.py  pose_detect.py  pyproject.toml  train.ipynb  utils.py  v1.py  yolo_pose.ipynb  yolo_pose.py
